--- a/frontend/src/Styles/Employee.css
+++ b/frontend/src/Styles/Employee.css
@@ -1,29 +1,52 @@
 .employee-container{
     width: 100%;
-    height: 100vh;
+    height:100vh;
+    background-color:#1F1F1F;
+
+}
+.employee-main{
     padding: 10px;
     display: flex;
     justify-content: center;
-    align-items: center;
-    background-color: #1B1C30;
-   
-}
-.employee-main{
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    overflow: auto;
-}
-.employee-main table{
-    width: 100%;
+    align-items: center;    
+    flex-direction: column;
     height: auto;
+}
+.employee-title{
+    width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
     padding: 10px;
-    table-layout:auto;
-    border-collapse:collapse;
-    background-color:#1F1F1F;
-    border-radius: 10px;
+    letter-spacing: 3px;
+    color: #ffffff;
+}
+.employee-tableMain{
+    display: flex;
+    justify-content: center;
+    width: 100%;
     overflow-x: auto;
     white-space: nowrap;
+    place-items: center;
+}
+
+  ::-webkit-scrollbar{
+    height: 4px;
+    width: 4px;
+    background: gray;
+}
+::-webkit-scrollbar-thumb:horizontal{
+    background: #FFFFFF;
+    border-radius: 10px;
+}
+.employee-table{
+    width:100%;
+    border-collapse:collapse;
+    border-radius: 10px;
+}
+.employee-table table{
+    width:100%;
+    margin: 10px;
 }
 
 .employee-main th {
